Archive2/b5/d876ce7ec14045/output
main.cpp:19:7: error: call to constructor of 'A' is ambiguous
    A a({{0,1,2,3,4,5}});
      ^ ~~~~~~~~~~~~~~~
main.cpp:7:7: note: candidate is the implicit move constructor
class A
      ^
main.cpp:7:7: note: candidate is the implicit copy constructor
main.cpp:10:5: note: candidate constructor
    A(const Cont &cont) : 
    ^
1 error generated.
